--- a/futureservator/reservator/templates/index.html
+++ b/futureservator/reservator/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <ul class="room-list">
 {% for room in rooms %}
-<li><a href="{% url reservator.views.room room.address %}">{{ room.name }}</a></li>
+<li><a href="{% url 'reservations' room_address=room.address %}">{{ room.name }}</a></li>
 {% endfor %}
 </ul>
 {% endblock %}
