--- a/futureservator/reservator/templates/room.html
+++ b/futureservator/reservator/templates/room.html
@@ -1,15 +1,42 @@
 {% extends "base_generic.html" %}
+{% load url from future %}
+
+{% block actions %}
+{% if view_all %}
+<a class="futu-box-action" href="{% url 'reservations' room_address=room_address %}">This week</a>
+{% else %}
+<a class="futu-box-action" href="{% url 'reservations-all' room_address=room_address %}">View all</a>
+{% endif %}
+<a class="futu-box-action" href="{% url 'reservations' room_address %}?day={{ nextmonday }}">Next week</a>
+<a class="futu-box-action" href="{% url 'reservations' room_address %}?day={{ lastmonday }}">Last week</a>
+{% endblock %}
 
 {% block content %}
+{% if error_message %}<div class="error">{{ error_message }}</div>{% endif %}
 
-<h2>Room reservations</h2>
+<div id="reservations">
 {% for r in reservations %}
-{{ r|pprint }}
-<form>
-	<input type="submit" value="Cancel" />
+<div class="reservation{% if r.linked %} cancelable{% endif %}">
+	<span class="date">{{ r.start|date }}</span>
+	<span class="start">{{ r.start|time:"H:i" }}</span><span class="end">{{ r.end|time:"H:i" }}</span>
+	<span class="subject">{{ r.subject|escape }}</span>
+	<span class="debug">{{ r|pprint }}</span>
+{% if r.linked %}
+<form action="{% url 'cancel' room_address %}" method="post">
+{% csrf_token %}
+	<div>
+		<input type="hidden" name="itemid" value="{{ r.linked.id }}" />
+		<input type="submit" value="Cancel" />
+	</div>
 </form>
-
-<br />
+{% endif %}
+</div>
 {% endfor %}
+</div>
 
+{% if not view_all %}
+<script type="text/javascript">
+jQuery(reservator_init('{{ day }}'));
+</script>
+{% endif %}
 {% endblock %}
