--- a/futureservator/reservator/templates/room.html
+++ b/futureservator/reservator/templates/room.html
@@ -8,7 +8,7 @@
 <a class="futu-box-action" href="{% url 'reservations-all' room_address=room_address %}">View all</a>
 {% endif %}
 <a class="futu-box-action" href="{% url 'reservations' room_address %}?day={{ nextmonday }}">Next week</a>
-<a class="futu-box-action" href="{% url 'reservations' room_address %}?day={{ lastmonday }}">Last week</a>
+<a class="futu-box-action" href="{% url 'reservations' room_address %}?day={{ prevmonday }}">Prev week</a>
 {% endblock %}
 
 {% block content %}
