--- a/android/Reservator/res/layout/settings_activity.xml
+++ b/android/Reservator/res/layout/settings_activity.xml
@@ -6,8 +6,10 @@
 	<RelativeLayout
 		android:layout_width="wrap_content" android:layout_height="wrap_content"
 		android:layout_centerInParent="true" android:paddingRight="20dp" android:paddingLeft="20dp">
-		<TextView android:layout_height="wrap_content" android:gravity="center_vertical" android:lines="2" android:layout_width="fill_parent" android:id="@+id/serverAddressLabel" android:text="@string/exchange_server_address"></TextView>
+		<TextView android:layout_height="wrap_content" android:lines="2" android:layout_width="fill_parent" android:id="@+id/serverAddressLabel" android:text="@string/exchange_server_address"></TextView>
 		<EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/serverAddressLabel" android:layout_alignLeft="@+id/serverAddressLabel" android:layout_alignRight="@+id/serverAddressLabel" android:id="@+id/serverAddressEdit" android:maxLines="1" android:inputType="text"></EditText>
-		<Button android:layout_below="@+id/serverAddressEdit" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/removeUserDataButton" android:layout_alignLeft="@+id/serverAddressEdit" android:text="@string/removeUserData"></Button>
+		<TextView android:layout_height="wrap_content" android:lines="2" android:layout_width="fill_parent" android:layout_below="@+id/serverAddressEdit" android:id="@+id/roomNameLabel" android:text="@string/room_name"></TextView>
+		<EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/roomNameLabel" android:layout_alignLeft="@+id/roomNameLabel" android:layout_alignRight="@+id/roomNameLabel" android:id="@+id/roomNameEdit" android:maxLines="1" android:inputType="text"></EditText>
+   		<Button android:layout_below="@+id/roomNameEdit" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/removeUserDataButton" android:layout_alignLeft="@+id/serverAddressEdit" android:text="@string/removeUserData"></Button>
 	</RelativeLayout>
 </RelativeLayout>
