cleanups for the xml's, reverting my previous fix

--- a/android/Reservator/res/layout/reservation_popup.xml
+++ b/android/Reservator/res/layout/reservation_popup.xml
@@ -1,6 +1,25 @@
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/relativeLayout1"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_gravity="center"
+    android:background="#6666"
+    android:isScrollContainer="false" >
 
-    <RelativeLayout android:id="@+id/relativeLayout1" xmlns:android="http://schemas.android.com/apk/res/android" android:isScrollContainer="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_gravity="center" android:background="#6666">
-            <FrameLayout android:id="@+id/frameLayout1" android:layout_height="wrap_content" android:layout_centerInParent="true" android:layout_width="match_parent" android:background="#fff">
-            	<com.futurice.android.reservator.view.LobbyReservationRowView android:id="@+id/roomReservationView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" android:padding="10dp" android:background="@drawable/popup_background"/>
-            </FrameLayout>
-    </RelativeLayout>
+    <FrameLayout
+        android:id="@+id/frameLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:background="#fff" >
+
+        <com.futurice.android.reservator.view.LobbyReservationRowView
+            android:id="@+id/roomReservationView1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="@drawable/popup_background"
+            android:padding="10dp" />
+    </FrameLayout>
+
+</RelativeLayout>
