--- a/android/Reservator/res/layout/lobby_activity.xml
+++ b/android/Reservator/res/layout/lobby_activity.xml
@@ -8,7 +8,6 @@
     <DigitalClock
         android:id="@+id/digitalClock1"
         style="@style/DigitalClockStyle"
-        android:layout_toRightOf="@+id/scrollView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -18,7 +17,7 @@
 
     <ScrollView
         android:id="@+id/scrollView1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="0dp"
@@ -26,7 +25,7 @@
 
         <LinearLayout
             android:id="@+id/linearLayout1"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingTop="60dp" >
