--- a/android/Reservator/res/layout/timespan_picker2.xml
+++ b/android/Reservator/res/layout/timespan_picker2.xml
@@ -1,15 +1,120 @@
 <?xml version="1.0" encoding="UTF-8"?>
- <RelativeLayout android:id="@+id/relativeLayout1" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content" android:paddingBottom="40dp">
-	<ImageButton android:background="@drawable/button_background" android:src="@drawable/minus_icon" android:layout_alignParentLeft="true" android:id="@+id/startMinus" android:layout_below="@+id/startInfoLabel" android:layout_height="31sp" android:layout_width="31sp"></ImageButton>
-     <com.futurice.android.reservator.view.TimeBarView android:id="@+id/timeBarView" android:layout_below="@+id/startMinus" android:layout_alignLeft="@+id/startMinus" android:layout_marginTop="5dp" android:layout_marginBottom="5dp" android:layout_width="10dp" android:layout_alignRight="@+id/endPlus" android:layout_height="50dp">
-     </com.futurice.android.reservator.view.TimeBarView>
-     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignRight="@+id/startTimeLabel" android:text="@string/start" android:layout_centerVertical="false" android:gravity="center" android:id="@+id/startInfoLabel" android:layout_alignLeft="@+id/startTimeLabel"></TextView> -->
-     <TextView android:id="@+id/startTimeLabel" android:layout_height="wrap_content" android:gravity="center" android:layout_toRightOf="@+id/startMinus" android:layout_alignTop="@+id/startMinus" android:layout_alignBottom="@+id/startMinus" android:text="12:00" android:textAppearance="@style/TimeSpanTimeStyle" android:layout_width="70sp"></TextView>
-     
-     <ImageButton android:background="@drawable/button_background" android:src="@drawable/plus_icon" android:layout_toRightOf="@+id/startTimeLabel" android:id="@+id/startPlus" android:layout_alignTop="@+id/startTimeLabel" android:layout_alignBottom="@+id/startTimeLabel" android:layout_height="31sp" android:layout_width="31sp"></ImageButton>
-     <TextView android:id="@+id/separatorLabel" android:layout_toRightOf="@+id/startPlus" android:layout_alignTop="@+id/startPlus" android:layout_alignBottom="@+id/startPlus" android:gravity="center" android:layout_height="40sp" android:textAppearance="@style/TimeSpanTimeStyle" android:layout_width="20sp"></TextView>
-     <ImageButton android:background="@drawable/button_background" android:src="@drawable/minus_icon" android:layout_toRightOf="@+id/separatorLabel" android:id="@+id/endMinus" android:layout_alignTop="@+id/separatorLabel" android:layout_alignBottom="@+id/separatorLabel" android:layout_height="31sp" android:layout_width="31sp"></ImageButton>
-     <TextView android:layout_toRightOf="@+id/endMinus" android:layout_height="wrap_content" android:layout_alignTop="@+id/endMinus" android:layout_alignBottom="@+id/endMinus" android:gravity="center" android:text="13:00" android:textAppearance="@style/TimeSpanTimeStyle" android:layout_width="70sp" android:id="@+id/endTimeLabel"></TextView>
-     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/end" android:gravity="center" android:id="@+id/endInfoLabel" android:layout_above="@+id/endTimeLabel" android:layout_alignLeft="@+id/endTimeLabel" android:layout_alignRight="@+id/endTimeLabel"></TextView>
-     <ImageButton android:background="@drawable/button_background" android:src="@drawable/plus_icon" android:id="@+id/endPlus" android:layout_toRightOf="@+id/endTimeLabel" android:layout_alignTop="@+id/endTimeLabel" android:layout_alignBottom="@+id/endTimeLabel" android:layout_width="31sp" android:layout_height="31sp"></ImageButton>
- </RelativeLayout>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/relativeLayout1"
+    android:layout_width="wrap_content"
+    android:layout_height="fill_parent"
+    android:paddingBottom="40dp" >
+
+    <ImageButton
+        android:id="@+id/startMinus"
+        android:layout_width="31sp"
+        android:layout_height="31sp"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/startInfoLabel"
+        android:background="@drawable/button_background"
+        android:src="@drawable/minus_icon" >
+    </ImageButton>
+
+    <com.futurice.android.reservator.view.TimeBarView
+        android:id="@+id/timeBarView"
+        android:layout_width="10dp"
+        android:layout_height="50dp"
+        android:layout_alignLeft="@+id/startMinus"
+        android:layout_alignRight="@+id/endPlus"
+        android:layout_below="@+id/startMinus"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp" >
+    </com.futurice.android.reservator.view.TimeBarView>
+
+    <TextView
+        android:id="@+id/startInfoLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/startTimeLabel"
+        android:layout_alignRight="@+id/startTimeLabel"
+        android:layout_centerVertical="false"
+        android:gravity="center"
+        android:text="@string/start" >
+    </TextView>
+ -->
+ 
+    <TextView
+        android:id="@+id/startTimeLabel"
+        android:layout_width="70sp"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/startMinus"
+        android:layout_alignTop="@+id/startMinus"
+        android:layout_toRightOf="@+id/startMinus"
+        android:gravity="center"
+        android:text="12:00"
+        android:textAppearance="@style/TimeSpanTimeStyle" >
+    </TextView>
+
+    <ImageButton
+        android:id="@+id/startPlus"
+        android:layout_width="31sp"
+        android:layout_height="31sp"
+        android:layout_alignBottom="@+id/startTimeLabel"
+        android:layout_alignTop="@+id/startTimeLabel"
+        android:layout_toRightOf="@+id/startTimeLabel"
+        android:background="@drawable/button_background"
+        android:src="@drawable/plus_icon" >
+    </ImageButton>
+
+    <TextView
+        android:id="@+id/separatorLabel"
+        android:layout_width="20sp"
+        android:layout_height="40sp"
+        android:layout_alignBottom="@+id/startPlus"
+        android:layout_alignTop="@+id/startPlus"
+        android:layout_toRightOf="@+id/startPlus"
+        android:gravity="center"
+        android:textAppearance="@style/TimeSpanTimeStyle" >
+    </TextView>
+
+    <ImageButton
+        android:id="@+id/endMinus"
+        android:layout_width="31sp"
+        android:layout_height="31sp"
+        android:layout_alignBottom="@+id/separatorLabel"
+        android:layout_alignTop="@+id/separatorLabel"
+        android:layout_toRightOf="@+id/separatorLabel"
+        android:background="@drawable/button_background"
+        android:src="@drawable/minus_icon" >
+    </ImageButton>
+
+    <TextView
+        android:id="@+id/endTimeLabel"
+        android:layout_width="70sp"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/endMinus"
+        android:layout_alignTop="@+id/endMinus"
+        android:layout_toRightOf="@+id/endMinus"
+        android:gravity="center"
+        android:text="13:00"
+        android:textAppearance="@style/TimeSpanTimeStyle" >
+    </TextView>
+
+    <TextView
+        android:id="@+id/endInfoLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/endTimeLabel"
+        android:layout_alignLeft="@+id/endTimeLabel"
+        android:layout_alignRight="@+id/endTimeLabel"
+        android:gravity="center"
+        android:text="@string/end" >
+    </TextView>
+
+    <ImageButton
+        android:id="@+id/endPlus"
+        android:layout_width="31sp"
+        android:layout_height="31sp"
+        android:layout_alignBottom="@+id/endTimeLabel"
+        android:layout_alignTop="@+id/endTimeLabel"
+        android:layout_toRightOf="@+id/endTimeLabel"
+        android:background="@drawable/button_background"
+        android:src="@drawable/plus_icon" >
+    </ImageButton>
+
+</RelativeLayout>
