--- a/android/Reservator/res/layout/settings_activity.xml
+++ b/android/Reservator/res/layout/settings_activity.xml
@@ -1,22 +1,69 @@
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/relativeLayout1"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/background"
+    android:padding="0dip" >
 
-<RelativeLayout android:id="@+id/relativeLayout1"
-	android:layout_width="fill_parent" android:layout_height="fill_parent"
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:background="@drawable/background" android:padding="0dip">
-	<RelativeLayout
-		android:layout_width="wrap_content" android:layout_height="wrap_content"
-		android:layout_centerInParent="true" android:paddingRight="20dp" android:paddingLeft="20dp">
-		<TextView android:layout_height="wrap_content" android:lines="2" android:layout_width="fill_parent" android:id="@+id/serverAddressLabel" android:text="@string/exchange_server_address"></TextView>
-		<EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/serverAddressLabel" android:layout_alignLeft="@+id/serverAddressLabel" android:layout_alignRight="@+id/serverAddressLabel" android:id="@+id/serverAddressEdit" android:maxLines="1" android:inputType="text"></EditText>
-		<TextView android:layout_height="wrap_content" android:lines="2" android:layout_width="fill_parent" android:layout_below="@+id/serverAddressEdit" android:id="@+id/roomNameLabel" android:text="@string/room_name"></TextView>
-		<Spinner 
-	        android:id="@+id/roomNameSpinner"
-	        android:layout_width="fill_parent"
-	        android:layout_alignLeft="@+id/roomNameLabel"
-	        android:layout_alignRight="@+id/roomNameLabel"
-	        android:layout_below="@+id/roomNameLabel"
-	        android:layout_height="wrap_content"
-	    />
-   		<Button android:layout_below="@+id/roomNameSpinner" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/removeUserDataButton" android:layout_alignLeft="@+id/serverAddressEdit" android:text="@string/removeUserData"></Button>
-	</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp" >
+
+        <TextView
+            android:id="@+id/serverAddressLabel"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:lines="2"
+            android:text="@string/exchange_server_address" >
+        </TextView>
+
+        <EditText
+            android:id="@+id/serverAddressEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/serverAddressLabel"
+            android:layout_alignRight="@+id/serverAddressLabel"
+            android:layout_below="@+id/serverAddressLabel"
+            android:inputType="text"
+            android:maxLines="1" >
+        </EditText>
+
+        <TextView
+            android:id="@+id/roomNameLabel"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/serverAddressEdit"
+            android:lines="2"
+            android:text="@string/room_name" >
+        </TextView>
+
+        <Spinner
+            android:id="@+id/roomNameSpinner"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/roomNameLabel"
+            android:layout_alignRight="@+id/roomNameLabel"
+            android:layout_below="@+id/roomNameLabel" />
+
+        <Button
+            android:id="@+id/removeUserDataButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/serverAddressEdit"
+            android:layout_below="@+id/roomNameSpinner"
+            android:text="@string/removeUserData" >
+        </Button>
+        
+        <ListView
+            android:id="@+id/roomListView"
+            android:layout_below="@+id/removeUserDataButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" 
+            android:cacheColorHint="@android:color/transparent" >
+        </ListView>
+    </RelativeLayout>
+
 </RelativeLayout>
