--- a/android/Reservator/res/layout/custom_settings_row.xml
+++ b/android/Reservator/res/layout/custom_settings_row.xml
@@ -18,6 +18,7 @@
             android:id="@+id/checkBox1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:checked="true"
             android:text="CheckBox"
             android:textColor="#000" />
 
