room filtering based on the settings, settings won't lose row values when scrolling

--- a/android/Reservator/res/layout/settings_select_room_row.xml
+++ b/android/Reservator/res/layout/settings_select_room_row.xml
@@ -10,6 +10,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:checked="true"
+        android:onClick="roomRowClicked"
         android:text=" "
         android:textColor="#000" />
 
