--- a/android/Reservator/res/layout/login_activity.xml
+++ b/android/Reservator/res/layout/login_activity.xml
@@ -3,59 +3,115 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/background"
+    android:gravity="center"
     android:padding="0dip" >
 
     <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="300dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="vertical"
-        android:padding="0dip" >
+        android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/exchange_username"
-            android:textColor="#000" >
+            android:orientation="horizontal" >
 
-        </TextView>
+            <LinearLayout
+                android:id="@+id/linearLayout1"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="0dip" >
 
-        <EditText
-            android:id="@+id/username"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:hint="@string/username_hint"
-            android:inputType="text"
-            android:maxLines="1"
-            android:textColor="#000" >
+                <TextView
+                    android:id="@+id/textView1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/exchange_username"
+                    android:textColor="#000" >
+                </TextView>
 
-        </EditText>
+                <EditText
+                    android:id="@+id/username"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:hint="@string/username_hint"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:textColor="#000" >
+                </EditText>
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/exchange_password"
-            android:textColor="#000" >
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/exchange_password"
+                    android:textColor="#000" >
+                </TextView>
 
-        </TextView>
+                <EditText
+                    android:id="@+id/password"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:hint="@string/password_hint"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textColor="#000" >
+                </EditText>
+            </LinearLayout>
 
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:hint="@string/password_hint"
-            android:inputType="textPassword"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:textColor="#000" >
+            <LinearLayout
+                android:id="@+id/fumLinearLayout1"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="0dip" >
 
-        </EditText>
+                <TextView
+                    android:id="@+id/fumTextView1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/fum_username"
+                    android:textColor="#000" >
+                </TextView>
+
+                <EditText
+                    android:id="@+id/fumUsername"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:hint="@string/username_hint"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:textColor="#000" >
+                </EditText>
+
+                <TextView
+                    android:id="@+id/fumTextView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/fum_password"
+                    android:textColor="#000" >
+                </TextView>
+
+                <EditText
+                    android:id="@+id/fumPassword"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:hint="@string/password_hint"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textColor="#000" >
+                </EditText>
+            </LinearLayout>
+        </LinearLayout>
 
         <Button
             android:id="@+id/loginButton"
@@ -64,7 +120,6 @@
             android:layout_marginTop="20dp"
             android:text="@string/login"
             android:textColor="#000" >
-
         </Button>
     </LinearLayout>
 
