--- a/android/Reservator/res/values/styles.xml
+++ b/android/Reservator/res/values/styles.xml
@@ -12,7 +12,8 @@
     <color name="StatusFreeColor">#529200</color>
     <color name="StatusReservedColor">#b24c4c</color>
     <color name="Transparent">#0000</color>
-    <color name="CalendarMarkerReservedColor">#d8f6d5c5</color>
+   <!-- <color name="CalendarMarkerReservedColor">#d8f6d5c5</color> -->
+    <color name="CalendarMarkerReservedColor">#d85BC904</color>
     <color name="CalendarMarkerFreeColor">#0000</color>
 
     <style name="Theme.Transparent" parent="android:Theme">
