--- a/android/Reservator/res/layout/settings_activity.xml
+++ b/android/Reservator/res/layout/settings_activity.xml
@@ -13,36 +13,33 @@
         android:paddingRight="20dp" >
 
         <TextView
-            android:id="@+id/serverAddressLabel"
+            android:id="@+id/usedAccountLabel"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:lines="2"
-            android:text="@string/exchange_server_address"
-            android:textColor="#000" >
+            android:text="@string/used_google_account"
+            style="@android:style/TextAppearance.Medium"
+            android:textColor="#000" />
 
-        </TextView>
-
-        <EditText
-            android:id="@+id/serverAddressEdit"
-            android:layout_width="wrap_content"
+        <Spinner
+            android:id="@+id/usedAccountSpinner"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/serverAddressLabel"
-            android:layout_alignRight="@+id/serverAddressLabel"
-            android:layout_below="@+id/serverAddressLabel"
+            android:layout_alignLeft="@+id/usedAccountLabel"
+            android:layout_alignRight="@+id/usedAccountLabel"
+            android:layout_below="@+id/usedAccountLabel"
             android:inputType="text"
-            android:maxLines="1" >
-        </EditText>
+            android:maxLines="1" 
+            android:layout_marginBottom="20dp" />
 
         <TextView
             android:id="@+id/roomNameLabel"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/serverAddressEdit"
-            android:lines="2"
+            android:layout_below="@+id/usedAccountSpinner"
+            android:layout_marginTop="20dp"
             android:text="@string/room_name"
-            android:textColor="#000" >
-
-        </TextView>
+            style="@android:style/TextAppearance.Medium"
+            android:textColor="#000" />
 
         <Spinner
             android:id="@+id/roomNameSpinner"
@@ -50,24 +47,35 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/roomNameLabel"
             android:layout_alignRight="@+id/roomNameLabel"
-            android:layout_below="@+id/roomNameLabel" />
+            android:layout_below="@+id/roomNameLabel"
+            android:layout_marginBottom="20dp" />
 
         <Button
             android:id="@+id/removeUserDataButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/serverAddressEdit"
+            android:layout_alignLeft="@+id/usedAccountSpinner"
             android:layout_below="@+id/roomNameSpinner"
-            android:text="@string/removeUserData" >
-        </Button>
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:text="@string/removeUserData" />
+        
+        <TextView
+            android:id="@+id/roomListLabel"
+            android:layout_below="@+id/removeUserDataButton"
+            android:layout_marginTop="20dp"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/shown_rooms"
+            style="@android:style/TextAppearance.Medium"
+            android:textColor="#000" />
         
         <ListView
             android:id="@+id/roomListView"
-            android:layout_below="@+id/removeUserDataButton"
+            android:layout_below="@+id/roomListLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" 
-            android:cacheColorHint="@android:color/transparent" >
-        </ListView>
+            android:cacheColorHint="@android:color/transparent" />
     </RelativeLayout>
 
 </RelativeLayout>
