add padding to fix layout issue

--- a/android/Reservator/res/layout/settings_activity.xml
+++ b/android/Reservator/res/layout/settings_activity.xml
@@ -9,6 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:paddingTop="100dp"
+        android:paddingBottom="40dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp" >
 
