more visual traffic light functionality (kudos to Sebi for design)

--- a/android/Reservator/res/layout/room_activity.xml
+++ b/android/Reservator/res/layout/room_activity.xml
@@ -1,49 +1,48 @@
-
-<RelativeLayout android:id="@+id/relativeLayout"
-	android:layout_width="fill_parent" android:layout_height="fill_parent"
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:background="@drawable/background" android:padding="10dip">
-	<com.futurice.android.reservator.view.WeekView
-		android:layout_width="fill_parent" android:id="@+id/weekView1"
-		android:layout_height="fill_parent" android:layout_below="@+id/roomNameLabel"
-		android:layout_marginLeft="0dp" android:layout_marginRight="0dp" android:layout_marginBottom="0dp" android:layout_marginTop="0dp" android:layout_toRightOf="@+id/seeAllRoomsButton">
-		<FrameLayout
-		android:layout_width="fill_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent" 
+	android:layout_height="fill_parent">
+	<RelativeLayout android:id="@+id/relativeLayout"
+		android:layout_width="fill_parent" 
 		android:layout_height="fill_parent"
-		android:layout_marginRight="10dp"
-		android:layout_marginBottom="0dp"
-		android:id="@+id/frameLayout1"></FrameLayout>
-	</com.futurice.android.reservator.view.WeekView>
-
-	<TextView
-	    android:id="@+id/roomNameLabel"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_alignParentLeft="true"
-	    android:layout_marginLeft="86dp"
-	    android:paddingLeft="40dp"
-	    android:textColor="@color/TextColor"
-	    android:textSize="20sp"
-	    android:textStyle="bold" 
-	    android:textIsSelectable="false" />
-
+		android:layout_gravity="center"
+		android:background="@drawable/background" android:padding="10dip">
+		<com.futurice.android.reservator.view.WeekView
+			android:layout_width="fill_parent" android:id="@+id/weekView1"
+			android:layout_height="fill_parent" android:layout_below="@+id/roomNameLabel"
+			android:layout_marginLeft="0dp" android:layout_marginRight="0dp" android:layout_marginBottom="0dp" android:layout_marginTop="0dp" android:layout_toRightOf="@+id/seeAllRoomsButton">
+			<FrameLayout
+			android:layout_width="fill_parent"
+			android:layout_height="fill_parent"
+			android:layout_marginRight="10dp"
+			android:layout_marginBottom="0dp"
+			android:id="@+id/frameLayout1"></FrameLayout>
+		</com.futurice.android.reservator.view.WeekView>
+	
+		<TextView
+		    android:id="@+id/roomNameLabel"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_alignParentLeft="true"
+		    android:layout_marginLeft="86dp"
+		    android:paddingLeft="40dp"
+		    android:textColor="@color/TextColor"
+		    android:textSize="20sp"
+		    android:textStyle="bold" 
+		    android:textIsSelectable="false" />
+	
+		<Button
+		    android:id="@+id/seeAllRoomsButton"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_alignBottom="@+id/weekView1"
+		    android:layout_alignParentLeft="true"
+		    android:background="@drawable/button_background"
+		    android:text="@string/seeAllRooms"
+		    android:textColor="#000" />
+	</RelativeLayout>
 	<com.futurice.android.reservator.view.RoomTrafficLights
-	    android:id="@+id/roomTrafficLights"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_above="@id/seeAllRoomsButton"
-	    android:layout_alignTop="@id/weekView1"
-	    android:layout_alignParentLeft="true"
-	    android:layout_toLeftOf="@id/weekView1" />	    
-		
-	<Button
-	    android:id="@+id/seeAllRoomsButton"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_alignBottom="@+id/weekView1"
-	    android:layout_alignParentLeft="true"
-	    android:background="@drawable/button_background"
-	    android:text="@string/seeAllRooms"
-	    android:textColor="#000" />
-
-</RelativeLayout>
+		android:layout_width="fill_parent" 
+		android:layout_height="fill_parent"
+		android:layout_gravity="center"
+	   	android:id="@+id/roomTrafficLights" />	    
+</FrameLayout>
