UX improvements & "Book Now" feature for traffic lights

--- a/android/Reservator/res/layout/room_traffic_lights.xml
+++ b/android/Reservator/res/layout/room_traffic_lights.xml
@@ -14,37 +14,53 @@
         android:textStyle="bold"
         android:textAllCaps="true"
         android:textIsSelectable="false" />
-   	<TextView
-	    android:id="@+id/roomStatus"
+	<RelativeLayout 
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-	    android:gravity="center_horizontal"
-	    android:textSize="80sp"
-	    android:textStyle="bold"
-	    android:textColor="@color/TrafficLightText"
-	    android:textIsSelectable="false" />
-	<TextView
-	    android:id="@+id/roomStatusInfo"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_below="@id/roomStatus"
-        android:textColor="@color/TrafficLightText"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:gravity="center_horizontal"
-        android:textIsSelectable="false" />
-	<TextView
-    	android:id="@+id/reservationInfo"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-    	android:layout_marginTop="5dp"
-   		android:layout_below="@id/roomStatusInfo"
-        android:textColor="@color/TrafficLightText"
-        android:textSize="30sp"
-   		android:gravity="center_horizontal"
-        android:textIsSelectable="false" />
+	    android:layout_centerInParent="true">
+	   	<TextView
+		    android:id="@+id/roomStatus"
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    android:layout_alignParentTop="true"
+		    android:gravity="center_horizontal"
+		    android:textSize="80sp"
+		    android:textStyle="bold"
+		    android:textColor="@color/TrafficLightText"
+		    android:textIsSelectable="false" />
+		<TextView
+		    android:id="@+id/roomStatusInfo"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="5dp"
+	        android:layout_below="@id/roomStatus"
+	        android:textColor="@color/TrafficLightText"
+	        android:textSize="50sp"
+	        android:textStyle="bold"
+	        android:gravity="center_horizontal"
+	        android:textIsSelectable="false" />
+		<TextView
+	    	android:id="@+id/reservationInfo"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	    	android:layout_marginTop="5dp"
+	   		android:layout_below="@id/roomStatusInfo"
+	        android:textColor="@color/TrafficLightText"
+	        android:textSize="30sp"
+	   		android:gravity="center_horizontal"
+	        android:textIsSelectable="false" />
+		<Button
+	    	android:id="@+id/bookNow"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	    	android:layout_marginTop="30dp"
+	    	android:layout_centerHorizontal="true"
+	   		android:layout_below="@id/reservationInfo"
+	        android:text="@string/bookNow"
+	        android:textSize="40sp"
+	        android:textStyle="bold"
+	        android:textIsSelectable="false" />
+	</RelativeLayout>
 	<TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
