--- a/android/Reservator/res/layout/room_activity.xml
+++ b/android/Reservator/res/layout/room_activity.xml
@@ -5,11 +5,11 @@
 		android:layout_width="fill_parent" 
 		android:layout_height="fill_parent"
 		android:layout_gravity="center"
-		android:background="@drawable/background" android:padding="10dip">
+		android:background="#fff" android:padding="10dip">
 		<com.futurice.android.reservator.view.WeekView
 			android:layout_width="fill_parent" android:id="@+id/weekView1"
 			android:layout_height="fill_parent" android:layout_below="@+id/roomNameLabel"
-			android:layout_marginLeft="0dp" android:layout_marginRight="0dp" android:layout_marginBottom="0dp" android:layout_marginTop="0dp" android:layout_toRightOf="@+id/seeAllRoomsButton">
+			android:layout_marginLeft="0dp" android:layout_marginRight="0dp" android:layout_marginBottom="0dp" android:layout_marginTop="10dp">
 			<FrameLayout
 			android:layout_width="fill_parent"
 			android:layout_height="fill_parent"
@@ -23,8 +23,6 @@
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:layout_alignParentLeft="true"
-		    android:layout_marginLeft="86dp"
-		    android:paddingLeft="40dp"
 		    android:textColor="@color/TextColor"
 		    android:textSize="20sp"
 		    android:textStyle="bold" 
@@ -34,8 +32,8 @@
 		    android:id="@+id/seeAllRoomsButton"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
-		    android:layout_alignBottom="@+id/weekView1"
-		    android:layout_alignParentLeft="true"
+		    android:layout_alignRight="@+id/roomNameLabel"
+		    android:layout_alignParentRight="true"
 		    android:background="@drawable/button_background"
 		    android:text="@string/seeAllRooms"
 		    android:textColor="#000" />
