--- a/android/Reservator/res/layout/login_activity.xml
+++ b/android/Reservator/res/layout/login_activity.xml
@@ -2,7 +2,7 @@
     android:id="@+id/relativeLayout1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/background"
+    android:background="#fff"
     android:gravity="center"
     android:padding="0dip" >
 </RelativeLayout>
