--- a/android/Reservator/res/values/styles.xml
+++ b/android/Reservator/res/values/styles.xml
@@ -9,10 +9,11 @@
     <color name="CalendarDisabledColor">#4000</color>
     <color name="CalendarBorderColor">#ccc</color>
     <color name="CalendarTextColor">#000</color>
+    <color name="CalendarResTextColor">#fff</color>
     <color name="StatusFreeColor">#529200</color>
     <color name="StatusReservedColor">#b24c4c</color>
     <color name="Transparent">#0000</color>
-    <color name="CalendarMarkerReservedColor">#d85BC904</color>
+    <color name="CalendarMarkerReservedColor">#999999</color>
     <color name="CalendarMarkerFreeColor">#0000</color>
 
     <style name="Theme.Transparent" parent="android:Theme">
