--- a/android/Reservator/res/values/styles.xml
+++ b/android/Reservator/res/values/styles.xml
@@ -13,7 +13,7 @@
     <color name="StatusFreeColor">#529200</color>
     <color name="StatusReservedColor">#b24c4c</color>
     <color name="Transparent">#0000</color>
-    <color name="CalendarMarkerReservedColor">#999999</color>
+    <color name="CalendarMarkerReservedColor">#0066CC</color>
     <color name="CalendarMarkerFreeColor">#0000</color>
 
     <style name="Theme.Transparent" parent="android:Theme">
@@ -48,6 +48,9 @@
     <color name="buttonTextDisabledColor">#999</color>
     <color name="TextInfoColor">#666</color>
     <color name="CalendarWeekTextColor">#999</color>
+    <color name="MenuButtonBackgroundColor">#005C99</color>
+    <color name="MenuButtonPressedColor">#00436E</color>
+    <color name="MenuButtonInactiveColor">#E3E3E9</color>
 
     <color name="TrafficLightFree">#4ccb00</color>
     <color name="TrafficLightYellow">#cee100</color>
