--- a/android/Reservator/res/layout/login_activity.xml
+++ b/android/Reservator/res/layout/login_activity.xml
@@ -5,4 +5,9 @@
     android:background="#fff"
     android:gravity="center"
     android:padding="0dip" >
+    
+    <TextView android:id="@+id/textView1"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="@string/loadingText" />
 </RelativeLayout>
