--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:paddingTop="100dp"
+        android:paddingTop="20dp"
         android:paddingBottom="40dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp" >
@@ -22,14 +22,24 @@
             style="@android:style/TextAppearance.Medium"
             android:textColor="#000" />
 
+        <TextView
+            android:id="@+id/addressBookHelpText"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/addressBookOptionLabel"
+            android:text="@string/addressBookHelpText"
+            style="@android:style/TextAppearance.Small"
+            android:textColor="#555" />
+
         <ToggleButton
             android:id="@+id/usedAddressBookOption"
             android:layout_width="20dp"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/addressBookOptionLabel"
             android:layout_alignRight="@+id/addressBookOptionLabel"
-            android:layout_below="@+id/addressBookOptionLabel"
-            android:onClick="onToggleClicked" />
+            android:layout_below="@+id/addressBookHelpText"
+            android:onClick="onToggleClicked"
+            android:layout_marginBottom="10dp" />
 
         <TextView
             android:id="@+id/defaultReservationAccountLabel"
@@ -47,7 +57,7 @@
             android:layout_below="@id/defaultReservationAccountLabel"
             android:inputType="text"
             android:maxLines="1"
-            android:layout_marginBottom="20dp" />
+            android:layout_marginBottom="10dp" />
 
         <TextView
             android:id="@+id/usedAccountLabel"
@@ -58,23 +68,31 @@
             style="@android:style/TextAppearance.Medium"
             android:textColor="#000" />
 
+        <TextView
+            android:id="@+id/usedAccountHelp"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/usedAccountLabel"
+            android:text="@string/googleAccountHelp"
+            style="@android:style/TextAppearance.Small"
+            android:textColor="#555" />
+
         <Spinner
             android:id="@+id/usedAccountSpinner"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/usedAccountLabel"
             android:layout_alignRight="@+id/usedAccountLabel"
-            android:layout_below="@+id/usedAccountLabel"
+            android:layout_below="@+id/usedAccountHelp"
             android:inputType="text"
-            android:maxLines="1" 
-            android:layout_marginBottom="20dp" />
+            android:maxLines="1" />
 
         <TextView
             android:id="@+id/roomNameLabel"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/usedAccountSpinner"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:text="@string/room_name"
             style="@android:style/TextAppearance.Medium"
             android:textColor="#000" />
@@ -86,7 +104,7 @@
             android:layout_alignLeft="@+id/roomNameLabel"
             android:layout_alignRight="@+id/roomNameLabel"
             android:layout_below="@+id/roomNameLabel"
-            android:layout_marginBottom="20dp" />
+            android:layout_marginBottom="10dp" />
 
         <Button
             android:id="@+id/removeUserDataButton"
@@ -94,13 +112,13 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/usedAccountSpinner"
             android:layout_below="@+id/roomNameSpinner"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:text="@string/removeUserData" />
         <TextView
             android:id="@+id/roomListLabel"
             android:layout_below="@+id/removeUserDataButton"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/shown_rooms"
